# FattreeGenerator

./:  fattree.topo  .gitignore  AggrSwitch.cpp  AggrSwitch.h  CMakeLists.txt  Connect.cpp  Connect.h  CoreSwitch.cpp  CoreSwitch.h  EdgeSwitch.cpp  EdgeSwitch.h  Host.cpp  Host.h  Node.cpp  Node.h  Pod.cpp  Pod.h  README.md  generator  main.cpp  makefile
Model/: AggrSwitch.cpp  AggrSwitch.h  Connect.cpp  Connect.h  CoreSwitch.cpp  CoreSwitch.h  EdgeSwitch.cpp  EdgeSwitch.h  Host.cpp  Host.h  Node.cpp  Node.h  Pod.cpp  Pod.h
